# VaultsBackend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analytics/models/: asset.py  protocol.py
auth/: models.py  serializers.py  tests.py  urls.py  views.py
core/: settings.py
docker/: gunicorn.config.py  start_server_production.sh
utils/: __init__.py  config_contract.py  messages.py  providers.py
vaults/: models.py  views.py
